Solved the lil' bug where entries looked too squished.

--- a/src/entries-viewer/entries.css
+++ b/src/entries-viewer/entries.css
@@ -64,11 +64,12 @@ div#entries-right-menu {
     flex-direction: row;
     flex-wrap: nowrap;
     float: left;
-    width: 100%;
+    width: 95%;
     margin: 0 0 100px 0;
     break-inside: avoid;
     break-after: avoid;
     page-break-inside: avoid;
+    padding: 0 2.5% 0 2.5%;
   }
 
   .entry-right {
@@ -153,9 +154,10 @@ div#entries-right-menu {
     flex-direction: row;
     flex-wrap: nowrap;
     float: left;
-    width: 100%;
+    width: 90%;
     min-width: 550px;
     margin: 0px 0 50px 0;
+    padding: 0 5% 0 5%;
   }
 
   .entry-date {
